--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -93,6 +93,7 @@
     <script src="modules/sellerListings/sellerListings.controller.js"></script>
     <script src="modules/sellerListings/addCarModalController.js"></script>
     <script src="modules/car/placeBidModal.controller.js"></script>
+    <script src="modules/sellerListings/addonsModal.controller.js"></script>
 
     <script src="services/RouteProtection.service.js"></script>
     <script src="services/Auth.service.js"></script>
