--- a/frontend/src/modules/booking/ownerBookings/confirmedBookings.html
+++ b/frontend/src/modules/booking/ownerBookings/confirmedBookings.html
@@ -41,6 +41,10 @@
                 </div>
             </div>
             <div class="row" style="margin-top: 15px;">
+                <div class="col-sm-12 mb-2">
+                    <label class="text-primary"><i class="fa fa-info-circle"></i> Filter by booking start date range:</label>
+                    <p class="small text-muted">This filter shows bookings that begin within the selected date range, not the entire booking period.</p>
+                </div>
                 <div class="col-sm-5">
                     <div class="input-group">
                         <span class="input-group-addon">
