--- a/frontend/src/modules/booking/ownerBookings/ownerBiddings.html
+++ b/frontend/src/modules/booking/ownerBookings/ownerBiddings.html
@@ -8,7 +8,7 @@
         </div>
         <div class="panel-body">
             <div class="row">
-                <div class="col-xs-12 col-sm-5">
+                <div class="col-xs-12 col-sm-4">
                     <div class="form-group">
                         <label class="control-label">Filter by Car:</label>
                         <select class="form-control" ng-model="filters.selectedCar" ng-change="fetchBookings()">
@@ -20,7 +20,7 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-sm-5">
+                <div class="col-xs-12 col-sm-4">
                     <div class="form-group">
                         <label class="control-label">Sort By:</label>
                         <select class="form-control" ng-model="sort.sortBy" ng-change="fetchBookings()">
@@ -31,14 +31,34 @@
                     </div>
                 </div>
 
-                <div class="col-xs-12 col-sm-2">
+                <div class="col-xs-12 col-sm-4">
                     <div class="form-group">
-                        <label class="control-label">&nbsp;</label>
-                        <button class="btn btn-default btn-block form-control" 
-                                ng-click="resetFilters()" 
-                                ng-disabled="!filters.selectedCar && !sort.sortBy">
-                            <i class="glyphicon glyphicon-refresh"></i> Reset
-                        </button>
+                        <label class="control-label">Actions:</label>
+                        <div class="btn-group btn-group-sm btn-block">
+                            <button class="btn btn-primary" 
+                                    ng-click="showOptimalBids()" 
+                                    ng-disabled="isLoadingOptimal">
+                                <i class="glyphicon glyphicon-star"></i> 
+                                <span ng-if="!isLoadingOptimal">Optimal Bids</span>
+                                <span ng-if="isLoadingOptimal"><i class="fa fa-spinner fa-spin"></i> Loading...</span>
+                            </button>
+                            <button class="btn btn-default" 
+                                    ng-click="resetFilters()" 
+                                    ng-disabled="!filters.selectedCar && !sort.sortBy">
+                                <i class="glyphicon glyphicon-refresh"></i> Reset
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="row" ng-if="optimalBidsActive">
+                <div class="col-xs-12">
+                    <div class="alert alert-info">
+                        <i class="glyphicon glyphicon-info-sign"></i> 
+                        Optimal bids are highlighted in <span class="label label-success">green</span>. 
+                        These combinations will maximize your total revenue.
+                        <button class="btn btn-xs btn-default pull-right" ng-click="clearOptimalBids()">Clear Highlights</button>
                     </div>
                 </div>
             </div>
@@ -74,7 +94,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="booking in bookings">
+                <tr ng-repeat="booking in bookings" ng-class="{'success': isOptimalBid(booking._id)}">
                     <td>{{booking.vehicle.company}} {{ booking.vehicle.name }}</td>
                     <td>{{ booking.vehicle.modelYear }}</td>
                     <td>{{ booking.vehicle.price | currency:"₹" }}</td>
@@ -104,6 +124,9 @@
                                 class="btn btn-danger btn-sm">
                             Reject
                         </button>
+                        <span ng-if="isOptimalBid(booking._id)" class="label label-success">
+                            <i class="glyphicon glyphicon-star"></i> Optimal
+                        </span>
                     </td>
                 </tr>
             </tbody>
@@ -112,9 +135,16 @@
     
 
     <div class="visible-xs" ng-if="bookings.length > 0">
-        <div class="panel panel-default" ng-repeat="booking in bookings" style="margin: 15px 5px;">
+        <div class="panel" ng-repeat="booking in bookings" 
+             ng-class="{'panel-default': !isOptimalBid(booking._id), 'panel-success': isOptimalBid(booking._id)}" 
+             style="margin: 15px 5px;">
             <div class="panel-heading">
-                <h4 class="panel-title">{{booking.vehicle.company}} {{ booking.vehicle.name }} ({{ booking.vehicle.modelYear }})</h4>
+                <h4 class="panel-title">
+                    {{booking.vehicle.company}} {{ booking.vehicle.name }} ({{ booking.vehicle.modelYear }})
+                    <span ng-if="isOptimalBid(booking._id)" class="label label-success pull-right">
+                        <i class="glyphicon glyphicon-star"></i> Optimal
+                    </span>
+                </h4>
             </div>
             <div class="panel-body">
                 <div class="row">
@@ -169,6 +199,9 @@
                                 class="btn btn-danger">
                             <i class="glyphicon glyphicon-remove"></i> Reject
                         </button>
+                        <span ng-if="isOptimalBid(booking._id)" class="label label-success">
+                            <i class="glyphicon glyphicon-star"></i> Optimal
+                        </span>
                     </div>
                 </div>
             </div>
