--- a/frontend/src/modules/car/addCar.html
+++ b/frontend/src/modules/car/addCar.html
@@ -155,7 +155,7 @@
               </div>
 
               <div class="form-group">
-                <label class="col-sm-3 control-label">Location:</label>
+                <label class="col-sm-3 control-label">Location Type:</label>
                 <div class="col-sm-9">
                   <select class="form-control" ng-model="location" name="location" required>
                     <option value="" disabled selected>Select Location</option>
@@ -204,7 +204,7 @@
               <div class="form-group">
                 <label class="col-sm-3 control-label">Car Images:</label>
                 <div class="col-sm-9">
-                  <input type="file" class="form-control" accept=".jpg, .jpeg, .png, .webp" multiple onchange="angular.element(this).scope().previewImages(this)" id="imageInput">
+                  <input type="file" class="form-control" accept=".jpg, .jpeg, .png, .webp" multiple onchange="angular.element(this).scope().showPreview(this)" id="imageInput">
                   <small class="help-block">Select up to 5 images (JPG, JPEG, PNG, WEBP)</small>
                   <div class="text-danger" ng-if="imageError">{{ imageError }}</div>
 
