--- a/frontend/src/modules/home/home.html
+++ b/frontend/src/modules/home/home.html
@@ -99,7 +99,7 @@
                 <div class="panel-body" style="padding: 0; height: 100%;">
 
                     <div class="car-image-container" style="height: 220px; overflow: hidden; position: relative; background-color: #f5f5f5;">
-                        <img ng-src="{{ car.vehicleImages[0].url || 'default-car.jpg' }}" 
+                        <img ng-src="{{ car.vehicleImages[0].url  }}" 
                              alt="{{ car.carName }}"
                              style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
                         <span class="label label-danger" style="position: absolute; top: 10px; right: 10px;" ng-if="car.isPopular">
