--- a/frontend/src/modules/admin/Analytics/analytics.html
+++ b/frontend/src/modules/admin/Analytics/analytics.html
@@ -7,10 +7,12 @@
         <div class="col-md-4">
             <div class="panel panel-success">
                 <div class="panel-heading">
-                    <i class="fas fa-users"></i> User Engagement
+                     User Engagement
                 </div>
                 <div class="panel-body text-center">
-                    <h3>{{userEngagementPercentage}}%</h3>
+                    <div class="panel-body text-center">
+                        <h3>{{userEngagementPercentage}}%</h3>
+                    </div>
                     <small>users with at least 1 bid are engaged users</small>
                 </div>
             </div>
@@ -18,7 +20,7 @@
         <div class="col-md-4">
             <div class="panel panel-warning">
                 <div class="panel-heading">
-                    <i class="fas fa-ban"></i> Blocked Users
+                    Blocked Users
                 </div>
                 <div class="panel-body text-center">
                     <h3>{{blockedUsers}}</h3>
@@ -31,7 +33,7 @@
         <div class="col-md-4">
             <div class="panel panel-info">
                 <div class="panel-heading">
-                    <i class="fas fa-clock"></i> Ongoing Bookings
+                   Ongoing Bookings
                 </div>
                 <div class="panel-body text-center">
                     <h3>{{ongoingBookings}}</h3>
