--- a/frontend/src/modules/sellerListings/sellerListings.html
+++ b/frontend/src/modules/sellerListings/sellerListings.html
@@ -1,3 +1,4 @@
+
 <div class="container-fluid bg-gray-lighter" ng-init="init()">
 
     <div class="row m-b-15">
@@ -37,15 +38,18 @@
                 <div class="panel-body" style="padding: 15px;">
                     <div class="row">
                         <div class="col-md-3">
-                            <div class="btn-group btn-group-justified">
+                            <div class="btn-group btn-group-justified filter-btn-group">
                                 <div class="btn-group">
-                                    <button class="btn btn-default" ng-click="showAll()" ng-class="{'active': activeButton === 'all'}">All</button>
+                                    <button class="btn btn-default filter-btn" ng-click="showAll()" ng-class="{'active': activeButton === 'all'}">All</button>
                                 </div>
                                 <div class="btn-group">
-                                    <button class="btn btn-default" ng-click="showApproved()" ng-class="{'active': activeButton === 'approved'}">Approved</button>
+                                    <button class="btn btn-default filter-btn" ng-click="showApproved()" ng-class="{'active': activeButton === 'approved'}">Approved</button>
                                 </div>
                                 <div class="btn-group">
-                                    <button class="btn btn-default" ng-click="showRejected()" ng-class="{'active': activeButton === 'rejected'}">Rejected</button>
+                                    <button class="btn btn-default filter-btn" ng-click="showPending()" ng-class="{'active': activeButton === 'pending'}">Pending</button>
+                                </div>
+                                <div class="btn-group">
+                                    <button class="btn btn-default filter-btn" ng-click="showRejected()" ng-class="{'active': activeButton === 'rejected'}">Rejected</button>
                                 </div>
                             </div>
                         </div>
@@ -223,5 +227,21 @@
 .p-0 { padding: 0 !important; }
 .b-0 { border: 0 !important; }
 .text-white { color: white !important; }
+
+/* Filter button styling */
+.filter-btn-group {
+    width: 100%;
+}
+.filter-btn {
+    padding: 6px 10px;
+    font-size: 12px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.filter-btn.active {
+    font-weight: bold;
+    box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+}
 </style>
 
