--- a/frontend/src/modules/booking/userBookings/myBookings.html
+++ b/frontend/src/modules/booking/userBookings/myBookings.html
@@ -2,36 +2,36 @@
 <div class="container" ng-init="init()">
 
     <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-12">
             <div class="page-header">
-                <h3 class="text-primary"><i class="glyphicon glyphicon-calendar"></i> My Bookings</h3>
-                <p class="text-muted">Manage and track all your car rental bookings</p>
+                <h2 class="text-primary"><i class="glyphicon glyphicon-calendar"></i> My Bookings</h2>
+                <p class="text-muted" style="font-size: 16px;">Manage and track all your car rental bookings</p>
             </div>
         </div>
     </div>
 
     <div class="row" ng-show="isLoading">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-12">
             <div class="text-center">
                 <i class="fa fa-spinner fa-spin fa-3x fa-fw text-primary"></i>
-                <p class="text-muted">Loading your bookings...</p>
+                <p class="text-muted" style="font-size: 16px;">Loading your bookings...</p>
             </div>
         </div>
     </div>
 
     <!-- Filter Panel - Always visible regardless of bookings -->
     <div class="row" ng-show="!isLoading">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="glyphicon glyphicon-filter"></i> Sort & Filter</h3>
+                    <h3 class="panel-title" style="font-size: 18px;"><i class="glyphicon glyphicon-filter"></i> Sort & Filter</h3>
                 </div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-md-4">
                             <div class="form-group">
-                                <label for="sortBy" class="control-label"><i class="glyphicon glyphicon-sort"></i> Sort By:</label>
-                                <select id="sortBy" class="form-control input-sm" ng-model="sortBy" ng-change="handleSorting()">
+                                <label for="sortBy" class="control-label" style="font-size: 15px;"><i class="glyphicon glyphicon-sort"></i> Sort By:</label>
+                                <select id="sortBy" class="form-control" ng-model="sortBy" ng-change="handleSorting()">
                                     <option value="" disabled selected>Select Sorting Option</option>
                                     <option value="amount">Price (High to Low)</option>
                                     <option value="startDate">Start Date (Latest First)</option>
@@ -40,11 +40,11 @@
                         </div>
                         <div class="col-md-4">
                             <div class="form-group">
-                                <label for="ownerSearch" class="control-label"><i class="glyphicon glyphicon-search"></i> Search by Owner:</label>
+                                <label for="ownerSearch" class="control-label" style="font-size: 15px;"><i class="glyphicon glyphicon-search"></i> Search by Owner:</label>
                                 <div class="input-group">
-                                    <input type="text" id="ownerSearch" class="form-control input-sm" ng-model="ownerNameQuery" placeholder="Type owner's name...">
+                                    <input type="text" id="ownerSearch" class="form-control" ng-model="ownerNameQuery" placeholder="Type owner's name...">
                                     <span class="input-group-btn">
-                                        <button class="btn btn-primary btn-sm" ng-click="searchByOwnerName()">
+                                        <button class="btn btn-primary" ng-click="searchByOwnerName()">
                                             <i class="glyphicon glyphicon-search"></i>
                                         </button>
                                     </span>
@@ -52,7 +52,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <button class="btn btn-default btn-sm btn-block" style="margin-top: 24px;" ng-click="resetFilters()">
+                            <button class="btn btn-default btn-block" style="margin-top: 24px;" ng-click="resetFilters()">
                                 <i class="glyphicon glyphicon-refresh"></i> Reset Filters
                             </button>
                         </div>
@@ -64,12 +64,12 @@
 
     <!-- No bookings alert - moved here to appear after the filters -->
     <div class="row" ng-show="bookings.length === 0 && !isLoading">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-12">
             <div class="alert alert-info">
                 <div class="text-center">
-                    <i class="fa fa-info-circle fa-2x" style="margin-bottom: 10px;"></i>
-                    <h4>No Active Bookings</h4>
-                    <p>You haven't made any bookings yet. Start exploring cars to rent!</p>
+                    <i class="fa fa-info-circle fa-3x" style="margin-bottom: 15px;"></i>
+                    <h3>No Active Bookings</h3>
+                    <p style="font-size: 16px;">You haven't made any bookings yet. Start exploring cars to rent!</p>
                 </div>
             </div>
         </div>
@@ -77,47 +77,47 @@
 
     <!-- Bookings Table - Only visible when bookings exist -->
     <div class="row" ng-show="bookings.length > 0">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title"><i class="glyphicon glyphicon-list"></i> Booking Details</h3>
+                    <h3 class="panel-title" style="font-size: 18px;"><i class="glyphicon glyphicon-list"></i> Booking Details</h3>
                 </div>
                 <div class="panel-body">
-                    <div class="table-responsive">
+                    <div class="table-responsive" style="padding: 0 5px;">
                         <table class="table table-hover table-striped">
                             <thead>
                                 <tr>
-                                    <th class="text-center">Amount</th>
-                                    <th class="text-center">Duration</th>
-                                    <th class="text-center">Car Details</th>
-                                    <th class="text-center">Owner Details</th>
-                                    <th class="text-center">Status</th>
+                                    <th class="text-center" style="font-size: 15px;">Amount</th>
+                                    <th class="text-center" style="font-size: 15px;">Duration</th>
+                                    <th class="text-center" style="font-size: 15px;">Car Details</th>
+                                    <th class="text-center" style="font-size: 15px;">Owner Details</th>
+                                    <th class="text-center" style="font-size: 15px;">Status</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr ng-repeat="booking in bookings">
                                     <td class="text-center">
-                                        <p class="text-success" style="margin: 0;"><strong>{{booking.calculate() | currency:"₹"}}</strong></p>
-                                        <small class="text-muted">{{booking.amount | currency:"₹"}}/day</small>
+                                        <p class="text-success" style="margin: 0; font-size: 16px;"><strong>{{booking.calculate() | currency:"₹"}}</strong></p>
+                                        <span style="font-size: 14px;">{{booking.amount | currency:"₹"}}/day</span>
                                     </td>
                                     <td class="text-center">
                                         <p style="margin-bottom: 5px;">
-                                            <span class="label label-primary">
+                                            <span class="label label-primary" style="font-size: 13px;">
                                                 <i class="glyphicon glyphicon-calendar"></i> 
                                                 {{booking.startDate | date: 'MMM dd, yyyy'}}
                                             </span>
                                         </p>
                                         <p style="margin: 0;">
-                                            <span class="label label-info">
+                                            <span class="label label-info" style="font-size: 13px;">
                                                 <i class="glyphicon glyphicon-calendar"></i> 
                                                 {{booking.endDate | date: 'MMM dd, yyyy'}}
                                             </span>
                                         </p>
                                     </td>
                                     <td>
-                                        <div class="well well-sm" style="margin: 0; padding: 5px 8px;">
-                                            <p style="margin: 0;">{{booking.vehicle.company}} {{booking.vehicle.name}}</p>
-                                            <p class="text-muted" style="margin-top: 5px; font-size: 12px;">
+                                        <div class="well well-sm" style="margin: 0; padding: 8px 10px;">
+                                            <p style="margin: 0; font-size: 15px;">{{booking.vehicle.company}} {{booking.vehicle.name}}</p>
+                                            <p class="text-muted" style="margin-top: 5px; font-size: 14px;">
                                                 <i class="glyphicon glyphicon-calendar"></i> {{booking.vehicle.modelYear}} |
                                                 <i class="glyphicon glyphicon-tag"></i> {{booking.vehicle.category}} |
                                                 <i class="glyphicon glyphicon-tint"></i> {{booking.vehicle.fuelType}} |
@@ -126,16 +126,16 @@
                                         </div>
                                     </td>
                                     <td>
-                                        <div class="well well-sm" style="margin: 0; padding: 5px 8px;">
-                                            <p style="margin: 0; font-size: 12px;">{{booking.owner.firstName}} {{booking.owner.lastName}}</p>
-                                            <p style="margin: 0; font-size: 11px;">@{{booking.owner.username}}</p>
-                                            <p style="margin: 0; font-size: 11px;" class="text-muted">
+                                        <div class="well well-sm" style="margin: 0; padding: 8px 10px;">
+                                            <p style="margin: 0; font-size: 15px;">{{booking.owner.firstName}} {{booking.owner.lastName}}</p>
+                                            <p style="margin: 0; font-size: 14px;">@{{booking.owner.username}}</p>
+                                            <p style="margin: 0; font-size: 14px;" class="text-muted">
                                                 <i class="glyphicon glyphicon-envelope"></i> {{booking.owner.email}}
                                             </p>
                                         </div>
                                     </td>
                                     <td class="text-center">
-                                        <span class="label" ng-class="{
+                                        <span class="label" style="font-size: 14px; padding: 6px 8px;" ng-class="{
                                             'label-success': booking.status === 'started',
                                             'label-warning': booking.status === 'approved',
                                             'label-info': booking.status === 'ended',
@@ -161,13 +161,13 @@
 
     <!-- Pagination - Only visible when bookings exist -->
     <div class="row" ng-show="pagination.totalItems > 0">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-12">
             <div class="text-center">
                 <ul uib-pagination
                     total-items="pagination.totalItems"
                     ng-model="pagination.currentPage"
                     max-size="pagination.maxSize"
-                    class="pagination pagination-sm"
+                    class="pagination"
                     boundary-links="true"
                     force-ellipses="true"
                     items-per-page="pagination.itemsPerPage"
@@ -178,7 +178,7 @@
                     next-text="&rsaquo;"
                     direction-links="true">
                 </ul>
-                <p class="text-muted" style="font-size: 12px;">Page {{pagination.currentPage}} of {{pagination.totalPages}}</p>
+                <p class="text-muted" style="font-size: 14px;">Page {{pagination.currentPage}} of {{pagination.totalPages}}</p>
             </div>
         </div>
     </div>
