--- a/frontend/src/modules/car/addCar.html
+++ b/frontend/src/modules/car/addCar.html
@@ -171,11 +171,11 @@
               <div class="form-group">
                 <label class="col-sm-3 control-label">Registration Number:</label>
                 <div class="col-sm-9">
-                  <input type="text" class="form-control" ng-model="registrationNumber" name="registrationNumber" placeholder="Enter vehicle registration number (e.g., MP07-DD-4567)" required ng-pattern="/^[A-Z0-9 -]{5,12}$/">
-                  <small class="help-block">Enter the official registration number as it appears on your vehicle documents</small>
+                  <input type="text" class="form-control" ng-model="registrationNumber" name="registrationNumber" placeholder="Enter vehicle registration number (e.g., MP07-DD-4567)" required ng-pattern="/^[A-Z]{2}[0-9]{2}-[A-Z]{2}-[0-9]{4}$/">
+                  <small class="help-block">Enter the official registration number as it appears on your vehicle documents (e.g., MP07-DD-4567)</small>
                   <div class="text-danger" ng-show="addCarForm.registrationNumber.$touched && addCarForm.registrationNumber.$invalid">
                     <span ng-show="addCarForm.registrationNumber.$error.required">Registration number is required.</span>
-                    <span ng-show="addCarForm.registrationNumber.$error.pattern">Please enter a valid registration number format.</span>
+                    <span ng-show="addCarForm.registrationNumber.$error.pattern">Please enter a valid registration number format (e.g., MP07-DD-4567).</span>
                   </div>
                 </div>
               </div>
