--- a/frontend/src/modules/sellerListings/addCarModal.html
+++ b/frontend/src/modules/sellerListings/addCarModal.html
@@ -83,7 +83,7 @@
     <div class="form-group">
       <label class="col-sm-3 control-label">Registration Number:</label>
       <div class="col-sm-9">
-        <input type="text" class="form-control" ng-model="registrationNumber" name="registrationNumber" placeholder="Enter vehicle registration number (e.g., AB12 XYZ)" required ng-pattern="/^[A-Z0-9 -]{5,12}$/">
+        <input type="text" class="form-control" ng-model="registrationNumber" name="registrationNumber" placeholder="Enter vehicle registration number (e.g., MP O9 KK 9000 )" required ng-pattern="/^[A-Z]{2}[\\- ]?[0-9]{2}[\\- ]?[A-Z]{1,2}[\\- ]?[0-9]{4}$/">
         <small class="help-block">Enter the official registration number as it appears on your vehicle documents</small>
         <div class="text-danger" ng-show="addCarModalForm.registrationNumber.$touched && addCarModalForm.registrationNumber.$invalid">
           <span ng-show="addCarModalForm.registrationNumber.$error.required">Registration number is required.</span>
