--- a/frontend/src/modules/sellerListings/addonsModal.html
+++ b/frontend/src/modules/sellerListings/addonsModal.html
@@ -4,7 +4,7 @@
     </button>
     <h3 class="modal-title">Manage One-time Addons</h3>
 </div>
-<div class="modal-body">
+<div class="modal-body" ng-init="init()">
     <uib-tabset active="activeTab">
         <uib-tab index="0" heading="Current Addons">
             <div style="margin-top: 15px;">
