--- a/frontend/src/modules/car/placeBidModal.html
+++ b/frontend/src/modules/car/placeBidModal.html
@@ -5,7 +5,7 @@
     </button>
 </div>
 
-<div class="modal-body">
+<div class="modal-body" ng-init="init()">
     <div class="row">
         <div class="col-md-12">
             <div class="alert alert-info">
@@ -141,6 +141,31 @@
     border: 1px solid #eee;
     border-radius: 4px;
     background-color: #f9f9f9;
+}
+
+#modalDateRangePicker {
+    background-color: #ffffff;
+    border: 1px solid #ddd;
+    color: #333;
+    cursor: pointer;
+    padding: 8px 12px;
+    height: 40px;
+    transition: border-color 0.2s ease, box-shadow 0.2s ease;
+}
+
+#modalDateRangePicker:hover {
+    border-color: #2196F3;
+}
+
+#modalDateRangePicker:focus {
+    border-color: #2196F3;
+    box-shadow: 0 0 0 0.2rem rgba(33, 150, 243, 0.25);
+    outline: none;
+}
+
+#modalDateRangePicker::placeholder {
+    color: #666;
+    opacity: 1;
 }
 
 .addon-item {
