--- a/frontend/src/modules/car/singleCar.html
+++ b/frontend/src/modules/car/singleCar.html
@@ -134,7 +134,7 @@
                                                 <span class="owner-label">Username:</span>
                                                 <span class="owner-value">{{ car.owner.username }}</span>
                                             </div>
-                                            <div class="owner-detail" ng-if="sellerRating">
+                                            <div class="owner-detail" ng-if="sellerRating && averageRating!=='0.0'">
                                                 <span class="owner-label">Rating:</span>
                                                 <span class="owner-value seller-rating">
                                                     {{ sellerRating | number:1 }}
