--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -94,6 +94,7 @@
     <script src="views/becomeSeller/becomeSeller.controller.js"></script>
     <script src="views/admin/platformManagement/rejectCarModal.controller.js"></script>
     <script src="views/seller/sellerListings/bookingsModal/bookingModal.controller.js"></script>
+    <script src="views/car/exploreCars.controller.js"></script>
 
     <!-- Services -->
     <script src="services/Api.service.js"></script>
